2015-04-13  Tim Waugh  <twaugh@redhat.com>

	* tests/fullheader2/run-test: Another test for handling git
	output.
	* Makefile.am: Run it. Currently expected to fail.

2015-03-20  Tim Waugh  <twaugh@redhat.com>

	* tests/fullheader1/run-test: Test for handling git output.
	* Makefile.am: Run it. Currently expected to fail.

2015-02-19  Tim Waugh  <twaugh@redhat.com>

	* tests/recount7/run-test: Test for recountdiff with broken
	whitespace-only lines.
	* scripts/recountdiff.in: Be more forgiving of broken
	whitespace-only context lines (found due to bug #1194285).

2014-11-04  Tim Waugh  <twaugh@redhat.com>

	* NEWS: Updated.

	* splitdiff.in: New -D option, suggested by Ulf Samuelsson.
	* common.sh: Set path to splitdiff in the test environment.
	* tests/splitdiffD/run-test: Test splitdiff -D.
	* Makefile.am: Make sure splitdiff is up to date before
	running tests. Run splitdiffD test.
	* doc/patchutils.xml: Updated.

2014-10-17  Tim Waugh  <twaugh@redhat.com>

	* Makefile.am: Run delhunk6 test even though it is expected to
	fail.

	* tests/trimlast1/run-test: Test case for trac issue #32.
	* tests/trimlast1/run-test: Another one.
	* Makefile.am: Run them (they both currently fail).

2014-05-09  Tim Waugh  <twaugh@redhat.com>

	* src/filterdiff.c: Make --clean drop comments after '@@'
	lines as well (trac #29).
	* tests/clean2/run-test: Test case for that.
	* Makefile.am: Run it.

2013-04-11  Tim Waugh  <twaugh@redhat.com>

	* src/filterdiff.c: Don't show grepdiff-specific options in
	help output for filterdiff/lsdiff (bug #948973).

2013-04-02  Tim Waugh  <twaugh@redhat.com>

	* configure.in: Version 0.3.3.

2011-05-26  Tim Waugh  <twaugh@redhat.com>

	* src/filterdiff.c (do_context): Handle "no newline" lines
	(trac #13, newline6 test case).

2011-05-25  Tim Waugh  <twaugh@redhat.com>

	* splitdiff.in: Output files now have a .patch filename
	extension, unless the new -E option is given.

2011-05-20  Tim Waugh  <twaugh@redhat.com>
